Sun Sep 15 03:58:29 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.h (scm_port_table): remove file_name member for now, it seems
	undesirable.
	* fports.c (scm_open_file): don't set file_name in PTAB.
	(prinfport): don't use file_name in PTAB.
	* ioext.c (scm_sys_duplicate_port): don't set file_name in PTAB.
	* ports.c (scm_add_to_port_table): don't intialize file_name.
	(scm_port_file_name): remove for now.
	* gc.c (scm_gc_mark): don't mark PTAB file_name.

	* fports.h (scm_mkfile): prototype deleted.
	* fports.c (scm_mkfile): merged into scm_open_file to simplify.

	* debug.c, unif.c: use scm_out_of_range instead of
	wta for range errors (ASSERT still needs work).

	* error.c, error.h (scm_out_of_range): new procedure.

	* error.c, error.h (scm_out_of_range_key): new key.

	* posix.c (scm_sync): #else was missing.

	* error.c, error.h: append _key to names scm_num_overflow and
 	scm_system_error.

	* __scm.h (SCM_SYSMISSING, SCM_NUM_OVERFLOW): use SCM_BOOL_F instead
	of consing an empty list.
	(SCM_SYSERROR etc.): move into error.c, make them procedures instead
	of macros, saves code and string space.
	error.c, fports.c, numbers.c, posix.c, ioext.c, filesys.c, socket.c,
	fdsocket.c, simpos.c: change names of SCM_SYSERROR etc., to
	lower case.  Rename scm_syserror_m to scm_syserror_msg.
	error.h: prototypes for new procedures.

Sat Sep 14 03:35:41 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* numbers.c: use SCM_NUM_OVERFLOW instead of scm_wta or ASSERT.

	* error.c, error.h: setup scm_num_overflow key.

	* __scm.h: SCM_NUM_OVERFLOW: macro for reporting numerical overflow.
	Remove definition of SCM_OVSCM_FLOW.

	* fports.c (scm_open_file): use SCM_SYSERROR_M.

	* __scm.h: SCM_SYSERROR_M: new macro for system errors with an
	explicit message and args.

	* error.c, error.h, __scm.h: change system_error_sym to
	scm_system_error.

	* error.c (system_error_sym): remove leading %% from the Scheme name
	"%%system-error". 
